--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -233,7 +233,7 @@ Only those waters that are under the State of Oregon’s jurisdiction are evalua
 
 ## Data Sources
 
-Water quality data were retrieved from DEQ's [Ambient Water Quality Monitoring System (AWQMS)][3.1.1], which integrates DEQ water quality data with other publically available data sources (including the now retired DEQ LASAR database); the [Water Quality Portal][3.1.2], which includes data from the U.S. Environmental Protection Agency ([WQX/STORET][3.1.3]) database, USGS's National Water Information System ([NWIS][3.1.4]), and other federal agencies, Tribes, and various third parties; NOAA’s [National Estuarine Research Reserve System][3.1.5]; [EIM][3.1.6] (Washington Department of Ecology database); and data obtained during DEQ’s Integrated Report “call for data” process. 
+Water quality data were retrieved from DEQ's [Ambient Water Quality Monitoring System (AWQMS)][3.1.1], which integrates DEQ water quality data with other publicly available data sources (including the now retired DEQ LASAR database); the [Water Quality Portal][3.1.2], which includes data from the U.S. Environmental Protection Agency ([WQX/STORET][3.1.3]) database, USGS's National Water Information System ([NWIS][3.1.4]), and other federal agencies, Tribes, and various third parties; NOAA’s [National Estuarine Research Reserve System][3.1.5]; [EIM][3.1.6] (Washington Department of Ecology database); and data obtained during DEQ’s Integrated Report “call for data” process. 
 
 Information about watershed improvement projects and the associated on the ground treatments that were implemented were obtained from the [Oregon Watershed Restoration Inventory][3.1.7] (OWRI) database maintained by the Oregon Watershed Enhancement Board (OWEB).
 
@@ -283,7 +283,7 @@ Trends were evaluated over the entire twenty-year period. Minimum data requireme
 
 The status assessment is an evaluation of water quality data to determine if a waterbody attains water quality standards or TMDL targets. An attainment assessment was made for bacteria (*E. coli*, *Enterococcus*, and Fecal Coliform), dissolved oxygen, pH, and temperature in relation to the applicable numeric water quality criterion. For some waterbodies the applicable water quality criterion for these parameters is a narrative non-numeric criterion. In this situation, status was not determined. We used the 2018/2020 Integrated Report assessment methodology (DEQ, 2020) to determine attainment within each status period. The methodology considers all the applicable criteria for each parameter as well as the number of excursions for attainment conclusions. The specific methodology for each status category are described for each parameter in the sections below.
 
-Oregon does not have statewide numeric water quality standards for total phosphorus (TP) or total suspended solids (TSS); however, sometimes these parameters are identifed as pollutants that contribute to non-attainment of other water quality standards. Often the impairment is based on standards established for dissolved oxygen, pH, or sediment. An attainment assessment was made for total phosphorus (TP) or total suspended solids (TSS) where a TMDL target has been established for these parameters.
+Oregon does not have statewide numeric water quality standards for total phosphorus (TP) or total suspended solids (TSS); however, sometimes these parameters are identified as pollutants that contribute to non-attainment of other water quality standards. Often the impairment is based on standards established for dissolved oxygen, pH, or sediment. An attainment assessment was made for total phosphorus (TP) or total suspended solids (TSS) where a TMDL target has been established for these parameters.
 
 ### Assessment Units
 
@@ -720,9 +720,9 @@ For tributary waters that are not identified on the “Fish Use Designations” 
 
 Temperature status assessment results are reported and presented in the following way:
 
-*	__Attaining__: When there is one or less excursion of the applicable numeric temperature criteria within a three-year period **OR** no excursions of the cool water species Upper Klamath and Lost subbasins temperature TMDL target during a status period.
+*	__Attaining__: When there is one or less excursion of the applicable numeric temperature criteria within a three-year period **OR** no excursions of the cool water species Upper Klamath and Lost Subbasins temperature TMDL target during a status period.
 
-*	__Not Attaining__: When there are two or more excursions of the applicable numeric criteria within a three-year period **OR** one or more excursions to the cool water species Upper Klamath and Lost subbasins temperature TMDL target during a status period.
+*	__Not Attaining__: When there are two or more excursions of the applicable numeric criteria within a three-year period **OR** one or more excursions to the cool water species Upper Klamath and Lost Subbasins temperature TMDL target during a status period.
 
 *	__Unassessed__: When there are no results available or when there are results but no numeric water quality criteria to evaluate attainment against. Under these circumstances, the reasons for unassessed status are reported either as “No Results” for no available results or as “No TMDL Target” for a narrative temperature criterion where no TMDL targets have been developed. 
 
@@ -1053,7 +1053,7 @@ for(i in unique(state_param_sum_stn$Char_Name)){
   }
   
   cat(paste0("![", figs(name = paste0("state_", i, "_map"), 
-                        caption = paste0("Summary map of the status of ", i, " across the state")),
+                        caption = paste0("Summary map of the ", complete_years[17], "–", complete_years[20]," status of ", i, " monitoring stations across the state")),
              "](", state_map_dir, "Oregon_", gsub(",| ", "_", i), ".png)"), "\n")
   # cat()
   # fignum <- fignum + 1
@@ -1062,7 +1062,7 @@ for(i in unique(state_param_sum_stn$Char_Name)){
 
 cat("### Status\n\n")
 
-cat(paste0(tbls("au_sum", display = 'cite')," shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n"))
+cat(paste0(tbls("au_sum", display = 'cite')," shows the number of attaining, not attaining, and unassessed assessment units by parameter for the ", complete_years[17], "–", complete_years[20]," status period.\n\n"))
 
 au_sum <- state_param_sum_au %>% dplyr::group_by(Char_Name) %>% 
   dplyr::summarise(Attaining = sum(status_2016_2019 == "Attaining"),
@@ -1074,7 +1074,7 @@ au_sum <- state_param_sum_au %>% dplyr::group_by(Char_Name) %>%
 # cat(tbls(name = "au_sum", caption = "Summary of assessment unit status across the state."))
 
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
-             caption = tbls(name = "au_sum", caption = "Summary of assessment unit status across the state.")
+             caption = tbls(name = "au_sum", caption = "The number of assessment units in each status category by parameter for the ", complete_years[17], "–", complete_years[20]," status period across the state.")
 ) %>% table_style()
 
 cat("\n\n")
@@ -1087,14 +1087,14 @@ au_sum_plot <- ggplot2::ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", var
   ggplot2::ylab("# of Assessment Units")+
   ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
   ggplot2::theme_bw()+
-  ggplot2::ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
+  ggplot2::ggtitle("Count of Assessment Unit Status", subtitle = "Summarized by Parameter")
 
 au_sum_plot
-cap_list[[1]] <- figs(name = paste0("state_au_sum_plot"), caption = paste0("Summary plot of assessment unit status across the state by parameter."))
+cap_list[[1]] <- figs(name = paste0("state_au_sum_plot"), caption = paste0("Summary plot showing the number of assessment units in each status category by parameter for the ", complete_years[17], "–", complete_years[20]," status period across the state."))
 # cat(paste0("![", figs(name = paste0("state_au_sum_plot"), caption = paste0("Summary plot of assessment unit status across the state by parameter.")),
 #            "]()"))
 
-cat(paste0("\n\n", tbls("au_type_sum", display = 'cite')," contains a summary of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type.\n\n"))
+cat(paste0("\n\n", tbls("au_type_sum", display = 'cite')," contains a summary of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type for the ", complete_years[17], "–", complete_years[20]," status period.\n\n"))
 
 au_sum_type <- state_param_sum_au %>% dplyr::group_by(AU_Type, Char_Name) %>% 
   dplyr::summarise(Attaining = sum(status_2016_2019 == "Attaining"),
@@ -1106,13 +1106,13 @@ au_sum_type <- state_param_sum_au %>% dplyr::group_by(AU_Type, Char_Name) %>%
 # cat(tbls(name = "au_type_sum", caption = "Statewide status summary of assessment units by type."))
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format,
-             caption = tbls(name = "au_type_sum", caption = "Statewide status summary of assessment units by type.")
-) %>% table_style()
+             caption = tbls(name = "au_type_sum", caption = paste0("The number of assessment units in each status category by parameter for the ", complete_years[17], "–", complete_years[20]," status period across the state."))
+             )%>% table_style()
 
 
 cat("\n\n")
 
-cat(paste0("\n\n", tbls("stn_sum", display = 'cite') ," summarizes the number of attaining, not attaining, and unassessed stations by parameter.\n\n"))
+cat(paste0("\n\n", tbls("stn_sum", display = 'cite') ," summarizes the number of attaining, not attaining, and unassessed stations by parameter for the ", complete_years[17], "–", complete_years[20], " status period across the state.\n\n"))
 
 stn_sum <- state_param_sum_stn %>% dplyr::group_by(Char_Name) %>% 
   dplyr::summarise(Attaining = sum(status_2016_2019 == "Attaining"),
@@ -1125,7 +1125,7 @@ stn_sum <- state_param_sum_stn %>% dplyr::group_by(Char_Name) %>%
 # cat(tbls(name = "stn_sum", caption = "Summary of the status of stations across the state."))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
-             caption = tbls(name = "stn_sum", caption = "Summary of the status of stations across the state.")
+             caption = tbls(name = "stn_sum", caption = paste0("Summary of the ", complete_years[17], "–", complete_years[20]," status at monitoring stations across the state."))
 ) %>% table_style()
 
 cat("\n\n")
@@ -1138,10 +1138,12 @@ stn_sum_plot <- ggplot2::ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", v
   ggplot2::ylab("# of Stations")+
   ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
   ggplot2::theme_bw()+
-  ggplot2::ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
+  ggplot2::ggtitle("Count of Monitoring Station Status", subtitle = "Summarized by Parameter")
 
 stn_sum_plot
-cap_list[[2]] <- figs(name = paste0("state_stn_sum_plot"), caption = paste0("Summary plot of station status across the state by parameter."))
+cap_list[[2]] <- figs(name = paste0("state_stn_sum_plot"), caption =paste0("The number of stations in each status category by parameter for the ", 
+                                       complete_years[17], "–", complete_years[20],
+                                       " status period across the state."))
 # cat(paste0("![", figs(name = paste0("state_stn_sum_plot"), caption = paste0("Summary plot of station status across the state by parameter.")),
 #            "]()"))
 
