--- a/state_subbasin_summary.Rmd
+++ b/state_subbasin_summary.Rmd
@@ -76,7 +76,7 @@ if(nrow(wql_sub) > 0){
 
 ##### Status
 
-There are `r length(unique(par_sum_au$AU_ID))` assessment units within the `r subbasin_name` subbasin that had stations with available data to be included in this report. Some assessment units did not contain stations with targets or sufficient available data to determine attainment status and are listed as unassessed. `r tbls(name = paste0(subbasin_name, "_au_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_au_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed assessment units by parameter for the current status period.
+There are `r length(unique(par_sum_au$AU_ID))` assessment units within the `r subbasin_name` Subbasin that had stations with available data to be included in this report. Some assessment units did not contain stations with targets or sufficient available data to determine attainment status and are listed as unassessed. `r tbls(name = paste0(subbasin_name, "_au_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_au_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed assessment units by parameter for the `r paste(complete_years[17], "–", complete_years[20])` status period.
 
 ```{r status-au-table-sum, include = TRUE, results = 'asis'}
 
@@ -89,8 +89,8 @@ au_sum <- par_sum_au %>% dplyr::group_by(Char_Name) %>%
 
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(subbasin_name, "_au_sum"),
-                            caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin."))
-) %>% 
+                            caption = paste0("Summary of the ", complete_years[17], "–", complete_years[20]," assessment unit status within the ", subbasin_name, " Subbasin."))
+             ) %>% 
   table_style()
 
 ```
@@ -106,14 +106,14 @@ ggplot2::ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "S
   ggplot2::ylab("# of Assessment Units")+
   ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
   ggplot2::theme_bw()+
-  ggplot2::ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
+  ggplot2::ggtitle("Count of Assessment Unit Status", subtitle = "Summarized by Parameter")
 
 cap_list[[1]] <- figs(name = paste0(subbasin_name, "_au_sum_plot"),
-                      caption = paste0("The number of assessment units in each status category for each parameter within the ", subbasin_name, "."))
+                      caption = paste0("Summary plot showing the number of assessment units in each status category by parameter for the ", complete_years[17], "–", complete_years[20]," status period within the ", subbasin_name, " Subbasin."))
 
 ```
 
-Oregon DEQ groups assessment units into five types: "Stream", "Watershed Unit", "Lake", "Estuary or Bay", and "Coastline". `r tbls(name = paste0(subbasin_name, "_au_type_sum"), display="cite")` summarizes of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type.
+Oregon DEQ groups assessment units into five types: "Stream", "Watershed Unit", "Lake", "Estuary or Bay", and "Coastline". `r tbls(name = paste0(subbasin_name, "_au_type_sum"), display="cite")` summarizes of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type within the `r subbasin_name` Subbasin  for the `r paste(complete_years[17], "–", complete_years[20])` status period.
 
 ```{r status-au-table-type, include = TRUE, results = 'asis'}
 
@@ -126,12 +126,12 @@ au_sum_type <- par_sum_au %>% dplyr::group_by(AU_Type, Char_Name) %>%
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format, 
              caption = tbls(name = paste0(subbasin_name, "_au_type_sum"),
-                            caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type."))) %>%
+                            caption = paste0("The number of assessment units in each status category by parameter for the ", complete_years[17], "–", complete_years[20]," status period within the ", subbasin_name, " Subbasin."))) %>%
   table_style()
 
 ```
 
-There are `r length(unique(par_sum$MLocID))` stations within the `r subbasin_name` subbasin with available data included in this report. Stations without targets or without sufficient data to determine attainment are listed as unassessed. The reason for a station's unassessed status can be found in the appendix for this area. `r tbls(name = paste0(subbasin_name, "_stn_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_stn_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed stations by parameter for the current status period.
+There are `r length(unique(par_sum$MLocID))` stations within the `r subbasin_name` Subbasin with available data included in this report. Stations without targets or without sufficient data to determine attainment are listed as unassessed. The reason for a station's unassessed status can be found in **Appendix `r a.letter`**. `r tbls(name = paste0(subbasin_name, "_stn_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_stn_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed stations by parameter for the `r paste(complete_years[17], "–", complete_years[20])` status period.
 
 ```{r status-stn-table-sum, include = TRUE, results = 'asis'}
 
@@ -143,8 +143,8 @@ stn_sum <- par_sum %>% dplyr::group_by(Pollutant) %>%
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
              caption = tbls(name = paste0(subbasin_name, "_stn_sum"),
-                            caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin."))
-) %>%
+                            caption = paste0("Summary of the ", complete_years[17], "–", complete_years[20]," status at monitoring stations within the ", subbasin_name, " Subbasin."))
+             ) %>%
   table_style()
 
 ```
@@ -158,10 +158,12 @@ ggplot2::ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "
   ggplot2::ylab("# of Stations")+
   ggplot2::scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
   ggplot2::theme_bw()+
-  ggplot2::ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
+  ggplot2::ggtitle("Count of Monitoring Station Status", subtitle = "Summarized by Parameter")
 
 cap_list[[2]] <- figs(name = paste0(subbasin_name, "_stn_sum_plot"),
-                      caption = paste0("The number of stations in each status category for each parameter within the ", subbasin_name, "."))
+                      caption = paste0("The number of stations in each status category by parameter for the ", 
+                                       complete_years[17], "–", complete_years[20],
+                                       " status period within the ", subbasin_name, " Subbasin."))
 
 ```
 
