--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -247,7 +247,7 @@ Information about watershed improvement projects and the associated on the groun
 
 ## QA/QC Requirements
 
-All data used in the Status and Trends Report must have a project plan (Quality Assurance Project Plan (QAPP) or similar) or use widely accepted sampling and analysis methods. Internal DEQ data and data collected through the Volunteer Monitoring Program must have a Data Quality Level (DQL) of A or B. Data quality levels for parameters measured in the field are assigned following [DEQ’s Data Quality Matrix][3.2.1] (DEQ, 2013). The data quality matrix defines the accuracy and precision criteria for field audits and calibration verifications respectively. Analytical or laboratory analyzed data are assigned data quality levels based on quality control and assurance protocols and internal data review. Data submitted through the Integrated Report call for data or originally obtained from the Water Quality Portal were included if they had a result status of “Final”, “Accepted”, or “Validated”. We relied on the quality control checks implemented by OWEB for treatment data obtained from OWRI.
+All data used in the Status and Trends Report must have a project plan (Quality Assurance Project Plan (QAPP) or similar) or use widely accepted sampling and analysis methods. Internal DEQ data and data collected through the Volunteer Monitoring Program must have a Data Quality Level (DQL) of A or B. Data quality levels for parameters measured in the field are assigned following [DEQ’s Data Quality Matrix][3.2.1] (DEQ, 2013). The data quality matrix defines the accuracy and precision criteria for equipment calibration and field audits respectively. Analytical or laboratory analyzed data are assigned data quality levels based on quality control and assurance protocols and internal data review. Data submitted through the Integrated Report call for data or originally obtained from the Water Quality Portal were included if they had a result status of “Final”, “Accepted”, or “Validated”. We relied on the quality control checks implemented by OWEB for treatment data obtained from OWRI.
 
 Monitoring data typically includes results that are reported as "non-detects". Non-detects or censored data are reported when very small concentrations cannot be precisely measured due to limitations in field and laboratory analysis procedures. All that is known is the true result falls somewhere between zero and the reporting limit. Each analytical procedure has a Method Detection Level (MDL) and a Minimum Reporting Level (MRL). The MDL is the concentration at which a sample can be discerned from a sample blank. The MRL is the lowest concentration where an analyte can be both detected and an accurate concentration quantified. We use the generic term "Quantitation Limit" (QL) to include MRL, MDL and any other reporting limits used by third parties. For this analysis, we interpreted non-detect results using the approach described in DEQ's white paper on censored data (DEQ, 2018). The approach is summarized as follows:
 
