--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -944,6 +944,8 @@ For each parameter at each station where there were sufficient data to evaluate 
 
 A trend assessment using Seasonal Kendall cannot be made at a monitoring station unless the results there have an underlying regularity and there is sufficient data over time. We did not attempt to calculate trend unless there were water quality results in the same month for at least eight different years over the entire twenty-year analysis period. We define “results” as a water quality observation or a calculated summary in the statistical units of the water quality criteria (i.e. geomean or 7-day average daily maximum). If there were insufficient data, “Insufficient Data” is assigned as the result. At stations with sufficient data, a significant positive, negative, or steady trend was determined across all seasons and years when the significance of the trend slopes had a two-tailed p <= 0.20. “Improving” or “Degrading” are assigned to positive or negative slopes depending on the water quality standards and if increasing or decreasing values were an improvement or derogation of water quality. For example, a positive result (increasing value with time) is considered an improving trend for dissolved oxygen but a degrading trend for temperature. A steady trend had a slope equal to zero. “No significant Trend” is assigned when the null hypothesis is not rejected and indicates there is no consistent overall trends during the evaluation period.
 
+Because pH has a high criteria and a low criteria, an improving trend could be associated with a positive or negative seasonal trend slope in the data, depending on where the data is trending from. To address this, improving and degrading trends are defined uniquely for pH. An improving trend is assigned when the data is trending toward the center point between the high and low pH criterion. Data is determined to be trending toward the center of the criterion when the difference between the data and the center of the criterion is smaller at the end of the analysis period than the beginning of that period.
+
 ## Watershed Restoration or Protection Actions
 
 To summarize actions taken to restore or protect watersheds and water quality, we summarized on-the-ground treatments implemented and reported to OWEB’s  [Oregon Watershed Restoration Inventory][3.1.7] (OWRI). OWRI is a repository for a significant number of actions implemented in Oregon but it does not capture all restoration or protection actions. In particular projects funded by the United States Farm Bill and many USFS and BLM projects are not included. Typically treatments reported to OWRI were implemented as part of an OWEB grant funded project. DEQ also requires federal 319 grant recipients to report outputs to OWRI. There are over 130 unique treatments identified in OWRI. The various treatments are grouped broadly into the following activity types: fish passage, fish screening, instream habitat, instream flow, riparian, road, upland, and urban. For this report we summarized the number of treatments completed in each of the status periods and the total over the twenty-year period of analysis. For each status period, only treatments completed within the four-year period counted towards the total for that period. The year the project was completed was used for multi-year projects. The totals are reported in the Appendices by subbasin for each activity type and treatment.
